crates/franken-node/tests/snapshots/fleet_cli_e2e__fleet_cli_json_output_matrix.snap
---
source: crates/franken-node/tests/fleet_cli_e2e.rs
expression: matrix
---
{
  "status_zone": {
    "status": {
      "zone_id": "zone-golden-status",
      "active_quarantines": 1,
      "active_revocations": 0,
      "healthy_nodes": 1,
      "total_nodes": 2,
      "activated": true,
      "pending_convergences": [
        {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      ]
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 120,
    "stale_nodes": [
      {
        "zone_id": "zone-golden-status",
        "node_id": "node-golden-stale",
        "last_seen": "[last_seen]",
        "quarantine_version": 1,
        "health": "degraded"
      }
    ],
    "active_incidents": [
      {
        "incident_id": "inc-golden-status",
        "zone_id": "zone-golden-status",
        "target_id": "sha256:golden-status",
        "target_kind": "artifact",
        "reason": "golden status quarantine",
        "quarantine_version": 3,
        "emitted_at": "[emitted_at]",
        "convergence": {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      }
    ],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [
        {
          "action_id": "fleet-op-quarantine-golden-status",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-status",
            "incident_id": "inc-golden-status",
            "target_id": "sha256:golden-status",
            "target_kind": "artifact",
            "reason": "golden status quarantine",
            "quarantine_version": 3
          }
        }
      ],
      "nodes": [
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-fresh",
          "last_seen": "[last_seen]",
          "quarantine_version": 3,
          "health": "healthy"
        },
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-stale",
          "last_seen": "[last_seen]",
          "quarantine_version": 1,
          "health": "degraded"
        }
      ]
    }
  },
  "status_all": {
    "status": {
      "zone_id": "all",
      "active_quarantines": 1,
      "active_revocations": 0,
      "healthy_nodes": 1,
      "total_nodes": 2,
      "activated": true,
      "pending_convergences": [
        {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      ]
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 120,
    "stale_nodes": [
      {
        "zone_id": "zone-golden-status",
        "node_id": "node-golden-stale",
        "last_seen": "[last_seen]",
        "quarantine_version": 1,
        "health": "degraded"
      }
    ],
    "active_incidents": [
      {
        "incident_id": "inc-golden-status",
        "zone_id": "zone-golden-status",
        "target_id": "sha256:golden-status",
        "target_kind": "artifact",
        "reason": "golden status quarantine",
        "quarantine_version": 3,
        "emitted_at": "[emitted_at]",
        "convergence": {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      }
    ],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [
        {
          "action_id": "fleet-op-quarantine-golden-status",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-status",
            "incident_id": "inc-golden-status",
            "target_id": "sha256:golden-status",
            "target_kind": "artifact",
            "reason": "golden status quarantine",
            "quarantine_version": 3
          }
        }
      ],
      "nodes": [
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-fresh",
          "last_seen": "[last_seen]",
          "quarantine_version": 3,
          "health": "healthy"
        },
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-stale",
          "last_seen": "[last_seen]",
          "quarantine_version": 1,
          "health": "degraded"
        }
      ]
    }
  },
  "release": {
    "action": {
      "operation_id": "[operation-id]",
      "action_type": "release",
      "success": true,
      "receipt": {
        "operation_id": "[operation-id]",
        "receipt_id": "[receipt-id]",
        "issuer": "cli-fleet-operator",
        "issued_at": "[issued_at]",
        "zone_id": "zone-golden-release",
        "payload_hash": "[payload-hash]",
        "decision_payload": {
          "action_type": "release",
          "incident_id": "inc-golden-release",
          "scope": {
            "zone_id": "zone-golden-release"
          },
          "reason": "manual release via fleet CLI",
          "event_code": "FLEET-004"
        },
        "signature": {
          "algorithm": "ed25519",
          "public_key_hex": "fa4834147f6e690c3693eff61336046403cd8ae2a14f31b3c407358569239565",
          "key_id": "e9db4a16d0de9513",
          "key_source": "env",
          "signing_identity": "fleet-control-plane",
          "trust_scope": "fleet_decision",
          "signed_payload_sha256": "[signed-payload-sha256]",
          "signature_hex": "[signature-hex]"
        }
      },
      "convergence": {
        "converged_nodes": 0,
        "total_nodes": 0,
        "progress_pct": 100,
        "eta_seconds": 0,
        "phase": "Converged"
      },
      "trace_id": "trace-cli-fleet-release",
      "event_code": "FLEET-004"
    },
    "convergence_receipt": {
      "schema_version": "franken-node/fleet-convergence-receipt/v1",
      "operation_id": "[operation-id]",
      "event_code": "FLEET-004",
      "completed_at": "[completed_at]",
      "verdict": "converged",
      "elapsed_ms": 0,
      "poll_interval_ms": 100,
      "timeout_ms": 120000,
      "timed_out": false,
      "convergence": {
        "converged_nodes": 0,
        "total_nodes": 0,
        "progress_pct": 100,
        "eta_seconds": 0,
        "phase": "Converged"
      },
      "signature": {
        "algorithm": "ed25519",
        "public_key_hex": "fa4834147f6e690c3693eff61336046403cd8ae2a14f31b3c407358569239565",
        "key_id": "e9db4a16d0de9513",
        "key_source": "env",
        "signing_identity": "fleet-control-plane",
        "trust_scope": "fleet_convergence",
        "signed_payload_sha256": "[signed-payload-sha256]",
        "signature_hex": "[signature-hex]"
      }
    },
    "status": {
      "zone_id": "zone-golden-release",
      "active_quarantines": 0,
      "active_revocations": 0,
      "healthy_nodes": 0,
      "total_nodes": 0,
      "activated": true,
      "pending_convergences": []
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 120,
    "stale_nodes": [],
    "active_incidents": [],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [
        {
          "action_id": "fleet-op-inc-golden-release",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-release",
            "incident_id": "inc-golden-release",
            "target_id": "sha256:inc-golden-release",
            "target_kind": "artifact",
            "reason": "e2e contract quarantine",
            "quarantine_version": 5
          }
        },
        {
          "action_id": "[action-id]",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "release",
            "zone_id": "zone-golden-release",
            "incident_id": "inc-golden-release",
            "reason": "manual release via fleet CLI"
          }
        }
      ],
      "nodes": []
    }
  },
  "reconcile_timeout": {
    "action": {
      "operation_id": "[operation-id]",
      "action_type": "reconcile",
      "success": true,
      "receipt": {
        "operation_id": "[operation-id]",
        "receipt_id": "[receipt-id]",
        "issuer": "cli-fleet-operator",
        "issued_at": "[issued_at]",
        "zone_id": "all",
        "payload_hash": "[payload-hash]",
        "decision_payload": {
          "action_type": "reconcile",
          "scope": {
            "zone_id": "all"
          },
          "reason": "fleet reconcile",
          "event_code": "FLEET-005"
        },
        "signature": {
          "algorithm": "ed25519",
          "public_key_hex": "197f6b23e16c8532c6abc838facd5ea789be0c76b2920334039bfa8b3d368d61",
          "key_id": "d5c00cd437f29db5",
          "key_source": "env",
          "signing_identity": "fleet-control-plane",
          "trust_scope": "fleet_decision",
          "signed_payload_sha256": "[signed-payload-sha256]",
          "signature_hex": "[signature-hex]"
        }
      },
      "convergence": {
        "converged_nodes": 0,
        "total_nodes": 1,
        "progress_pct": 0,
        "eta_seconds": null,
        "phase": "TimedOut"
      },
      "trace_id": "trace-cli-fleet-reconcile",
      "event_code": "FLEET-005"
    },
    "convergence_receipt": {
      "schema_version": "franken-node/fleet-convergence-receipt/v1",
      "operation_id": "[operation-id]",
      "event_code": "FLEET-005",
      "completed_at": "[completed_at]",
      "verdict": "non_converged",
      "elapsed_ms": 0,
      "poll_interval_ms": 100,
      "timeout_ms": 1000,
      "timed_out": true,
      "convergence": {
        "converged_nodes": 0,
        "total_nodes": 1,
        "progress_pct": 0,
        "eta_seconds": null,
        "phase": "TimedOut"
      },
      "signature": {
        "algorithm": "ed25519",
        "public_key_hex": "197f6b23e16c8532c6abc838facd5ea789be0c76b2920334039bfa8b3d368d61",
        "key_id": "d5c00cd437f29db5",
        "key_source": "env",
        "signing_identity": "fleet-control-plane",
        "trust_scope": "fleet_convergence",
        "signed_payload_sha256": "[signed-payload-sha256]",
        "signature_hex": "[signature-hex]"
      }
    },
    "status": {
      "zone_id": "all",
      "active_quarantines": 1,
      "active_revocations": 0,
      "healthy_nodes": 0,
      "total_nodes": 1,
      "activated": true,
      "pending_convergences": [
        {
          "converged_nodes": 0,
          "total_nodes": 1,
          "progress_pct": 0,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      ]
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 1,
    "stale_nodes": [
      {
        "zone_id": "zone-golden-timeout",
        "node_id": "node-golden-timeout",
        "last_seen": "[last_seen]",
        "quarantine_version": 1,
        "health": "degraded"
      }
    ],
    "active_incidents": [
      {
        "incident_id": "inc-golden-timeout",
        "zone_id": "zone-golden-timeout",
        "target_id": "sha256:inc-golden-timeout",
        "target_kind": "artifact",
        "reason": "e2e contract quarantine",
        "quarantine_version": 6,
        "emitted_at": "[emitted_at]",
        "convergence": {
          "converged_nodes": 0,
          "total_nodes": 1,
          "progress_pct": 0,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      }
    ],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [
        {
          "action_id": "fleet-op-inc-golden-timeout",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-timeout",
            "incident_id": "inc-golden-timeout",
            "target_id": "sha256:inc-golden-timeout",
            "target_kind": "artifact",
            "reason": "e2e contract quarantine",
            "quarantine_version": 6
          }
        },
        {
          "action_id": "[action-id]",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-timeout",
            "incident_id": "inc-golden-timeout",
            "target_id": "sha256:inc-golden-timeout",
            "target_kind": "artifact",
            "reason": "e2e contract quarantine",
            "quarantine_version": 6
          }
        }
      ],
      "nodes": [
        {
          "zone_id": "zone-golden-timeout",
          "node_id": "node-golden-timeout",
          "last_seen": "[last_seen]",
          "quarantine_version": 1,
          "health": "degraded"
        }
      ]
    }
  },
  "agent_once": [
    {
      "cycle": 1,
      "node_id": "agent-golden-once",
      "zone_id": "zone-golden-agent",
      "configured_poll_interval_secs": 30,
      "actions_processed": 0,
      "last_action_id": null,
      "node_health": "healthy",
      "quarantine_version": 0,
      "poll_timestamp": "[poll_timestamp]"
    }
  ]
}
